--- a/Proiect ABD/Views/MainWindow.xaml
+++ b/Proiect ABD/Views/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TabaraDeVaraApp.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Autentificare Tabăra de Vară" Height="400" Width="500">
+        Title="Autentificare Tabăra de Vară" Height="600" Width="910">
     <Window.Resources>
         <!-- Define a reusable style for TextBox and PasswordBox -->
         <Style x:Key="InputStyle" TargetType="Control">
@@ -35,24 +35,26 @@
 
     <Grid>
         <!-- Background Grid -->
-        <Grid Background="#F2F2F2">
+        <Grid >
+            <Grid.Background>
+                <ImageBrush ImageSource="/Images/summercamp.jpg" Stretch="UniformToFill"/>
+            </Grid.Background>
             <!-- Email Label -->
-            <Label Content="Email" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,70,0,0" FontSize="16" FontWeight="Bold" Foreground="#333"/>
+            <Label Content="Email:" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="270,428,0,0" FontSize="16" FontWeight="Bold" Foreground="#333"/>
             <!-- Email TextBox -->
-            <TextBox Text="{Binding Email}" HorizontalAlignment="Left" Margin="150,70,0,0" VerticalAlignment="Top" Style="{StaticResource InputStyle}"/>
+            <TextBox Text="{Binding Email}" HorizontalAlignment="Center" Margin="0,428,0,0" Style="{StaticResource InputStyle}" Height="31"/>
 
             <!-- Password Label -->
-            <Label Content="Parolă" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,120,0,0" FontSize="16" FontWeight="Bold" Foreground="#333"/>
+            <Label Content="Parolă:" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="268,464,0,0" FontSize="16" FontWeight="Bold" Foreground="#333"/>
             <!-- Password Box -->
             <PasswordBox x:Name="PasswordBox"
-                         HorizontalAlignment="Left"
-                         Margin="150,120,0,0"
-                         VerticalAlignment="Top"
+                         HorizontalAlignment="Center"
+                         Margin="0,464,0,0"
                          Style="{StaticResource InputStyle}"
                          PasswordChanged="PasswordBox_PasswordChanged"/>
 
             <!-- Login Button -->
-            <Button Content="Autentificare" Command="{Binding LoginCommand}" Style="{StaticResource ButtonStyle}"/>
+            <Button Content="Autentificare" Command="{Binding LoginCommand}" Style="{StaticResource ButtonStyle}" Margin="0,499,0,0" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Window>
