--- a/Proiect ABD/Views/AddActivitateWindow.xaml
+++ b/Proiect ABD/Views/AddActivitateWindow.xaml
@@ -57,18 +57,17 @@
             <TextBox Text="{Binding Activitate.DataOra, UpdateSourceTrigger=PropertyChanged}" 
             AcceptsReturn="True"  TextWrapping="Wrap"/>
 
-            <!-- Select Children -->
-            <TextBlock Text="Selectează copiii participanți:" Margin="0,10,0,5"/>
-            <ListBox ItemsSource="{Binding Copii}" Height="150">
-                <ListBox.ItemTemplate>
+            <ItemsControl ItemsSource="{Binding Copii}">
+                <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal" Margin="5">
-                            <CheckBox IsChecked="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
-                            <TextBlock Text="{Binding Nume}" VerticalAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox IsChecked="{Binding IsChecked}" />
+                            <TextBlock Text="{Binding Copil.Nume}" />
                         </StackPanel>
                     </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
 
             <!-- Buttons -->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
