--- a/Proiect ABD/Views/AddCopilWindow.xaml
+++ b/Proiect ABD/Views/AddCopilWindow.xaml
@@ -1,14 +1,39 @@
 ﻿<Window x:Class="TabaraDeVaraApp.Views.AddCopilWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add Copil" Height="250" Width="400">
-    <Grid>
+        Title="Add Copil" Height="300" Width="450" WindowStartupLocation="CenterScreen">
+    <Grid Margin="10">
         <StackPanel>
-            <TextBox Text="{Binding Copil.Nume}"  Margin="10"/>
-            <TextBox Text="{Binding Copil.Prenume}" Margin="10"/>
-            <TextBox Text="{Binding Copil.Varsta}" Margin="10"/>
-            <TextBox Text="{Binding Copil.Parola}" Margin="10"/>
-            <Button Content="Save" Command="{Binding SaveCommand}" Margin="10"/>
+            <TextBlock Text="Add New Copil" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+
+            <GroupBox Header="Copil Details" Padding="10">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Label Content="Nume:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                    <TextBox Text="{Binding Copil.Nume}" Grid.Row="0" Grid.Column="1" Margin="0,0,0,10"/>
+
+                    <Label Content="Prenume:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                    <TextBox Text="{Binding Copil.Prenume}" Grid.Row="1" Grid.Column="1" Margin="0,0,0,10"/>
+
+                    <Label Content="Varsta:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                    <TextBox Text="{Binding Copil.Varsta}" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10"/>
+
+                    <Label Content="Parola:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                    <TextBox Text="{Binding Copil.Parola}" Grid.Row="3" Grid.Column="1" Margin="0,0,0,10"/>
+                </Grid>
+            </GroupBox>
+
+            <Button Content="Save" Command="{Binding SaveCommand}" HorizontalAlignment="Right" Width="100" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
 </Window>
